Fix scrollbars on Windows

--- a/client/src/web/assets/css/app.less
+++ b/client/src/web/assets/css/app.less
@@ -911,6 +911,7 @@ small {
 }
 ::-webkit-scrollbar-button {
   width: 8px;
+  display: none;
 }
 ::-webkit-scrollbar-track {
   border-radius: 10px;
